--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-sass": "^2.0.0",
     "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^2.2.0",
+    "gulp-subtree": "^0.1.0",
     "gulp-uglify": "^2.0.0",
     "gulp-useref": "^3.0.0",
     "main-bower-files": "^2.5.0",
